helm/manifests/patch-rapids.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rapids-service
spec:
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rapids-service
spec:
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: rapids-service
