helm/manifests/patch-yatai.yaml
---
# Source: YataiService/templates/yatai-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yatai-service
spec:
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatai-service
spec:
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: yatai-service
          image: alvarogg777/arm64v8:jp46-ml-202112
