helm/manifests/yatai.yaml
---
# Source: YataiService/templates/yatai-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yatai-service
  labels:
    app: yatai-service
spec:
  type: LoadBalancer
  ports:
  - name: web
    port: 3000
    targetPort: 3000
  - name: grpc
    port: 50051
    targetPort: 50051
  selector:
    app: yatai-service
---
# Source: YataiService/templates/yatai-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatai-service
  labels:
    app: yatai-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yatai-service
  template:
    metadata:
      labels:
        app: yatai-service
    spec:
      affinity:
        nodeAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              nodeSelectorTerms:
                - matchExpressions:
                  - key: "kubernetes.io/hostname"
                    operator: NotIn
                    values:
                      - kmaster
      imagePullSecrets:
        - name: regcred
      serviceAccountName: yatai-service-account
      containers:
        - name: yatai-service
          image: "alvarogg777/arm64v8:nvidia-l4t-base-32.5"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 50051
          - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
          command:
            - "/usr/local/bin/bentoml"
          args:
            - "yatai-service-start"
            - "--db-url=$(BACKEND_STORE_URI)"
            - "--repo-base-url=$(DEFAULT_ARTIFACT_ROOT)"
            - "--s3-endpoint-url=$(S3_ENDPOINT_URL)"
