helm/manifests/lab.yaml
---
# Source: voila/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-service
  labels:
    app.kubernetes.io/name: voila
    helm.sh/chart: voila-0.2.10
    app.kubernetes.io/instance: voila
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 8050
      targetPort: 8050
      name: dash
    - port: 8866
      targetPort: 8866
      protocol: TCP
      name: voila
    - port: 8888
      targetPort: 8888
      name: lab
  selector:
    app.kubernetes.io/name: voila
    app.kubernetes.io/instance: voila
---
# Source: voila/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab
  labels:
    app.kubernetes.io/name: voila
    helm.sh/chart: voila-0.2.10
    app.kubernetes.io/instance: voila
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: voila
      app.kubernetes.io/instance: voila
  template:
    metadata:
      labels:
        app.kubernetes.io/name: voila
        app.kubernetes.io/instance: voila
    spec: 
      affinity:
        nodeAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              nodeSelectorTerms:
                - matchExpressions:
                  - key: "kubernetes.io/hostname"
                    operator: In
                    values:
                      - knode2
                      - knode1
      imagePullSecrets:
        - name: regcred
      containers:
        - name: lab
          # image: alvarogg777/arm64v8:jp50-ml-dp-1
          image: alvarogg777/arm64v8:jp-5.2.1
          imagePullPolicy: IfNotPresent
          # command:
          #   - "voila"
          # args:
          #   - "--enable_nbextensions=True"
          #   - "--Voila.ip=0.0.0.0"
          #   - "--port=8866"
          #   - "--no-browser"
          #   - "--base_url=/voila"
          command:
            - "jupyter"
          args:
            - "lab"
            - "--ip"
            - "0.0.0.0"
            - "--allow-root"
          livenessProbe:
            httpGet:
              path: /
              port: 8888
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8888
            initialDelaySeconds: 15
            periodSeconds: 20
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 8888
          #   initialDelaySeconds: 20
          #   periodSeconds: 60
          #   timeoutSeconds: 30
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 8888
          #   initialDelaySeconds: 20
          #   periodSeconds: 5
          resources:
            {}
          # volumeMounts:
          #   - mountPath: "/export"
          #     name: minio
---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: add-voila
# spec:
#   addPrefix:
#     prefix: /voila
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: add-dash
# spec:
#   addPrefix:
#     prefix: /dash
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: add-lab
# spec:
#   addPrefix:
#     prefix: /lab
# ---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lab-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`lab.achlys.tech`) && PathPrefix(`/voila`)
      kind: Rule
      services:
        - name: lab-service
          port: 8866
      # middlewares:
      #   - name: add-voila
    - match: Host(`lab.achlys.tech`) && PathPrefix(`/dash`)
      kind: Rule
      services:
        - name: lab-service
          port: 8050
      # middlewares:
      #  - name: add-dash
    - match: Host(`lab.achlys.tech`)
      kind: Rule
      services:
        - name: lab-service
          port: 8888
      # middlewares:
      #  - name: add-lab
  tls:
    secretName: achlys-tls
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: voila-ingress
# spec:
#   tls:
#   - hosts:
#       - voila.achlys.tech
#     secretName: alboroto-tls
#   rules:
#   - host: voila.achlys.tech
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: voila-service
#             port:
#               name: voila
#       - path: /dash
#         pathType: Prefix
#         backend:
#           service:
#             name: voila-service
#             port:
#               name: dash

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: jupyter-ingress
# spec:
#   rules:
#   - host: jupyter.achlys.tech
#     http:
#       paths:
#       - path: /lab
#         pathType: Prefix
#         backend:
#           service:
#             name: voila-service
#             port:
#               number: 8888
#   #tls:
#   #  hosts:
#   #    - voila.achlys.tech
#   #  secretName: alboroto-tls
