helm/manifests/mlflow.yaml
---
# Source: mlflow/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  labels:
    app.kubernetes.io/name: mlflow
    helm.sh/chart: mlflow-1.4.0
    app.kubernetes.io/instance: mlflow
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
    - port: 8888
      targetPort: jupyter
      name: jupyter
      protocol: TCP
    - port: 3000
      targetPort: yatai
      name: yatai
      protocol: TCP
    - port: 8050
      targetPort: web
      name: web
      protocol: TCP
  selector:
    app.kubernetes.io/name: mlflow
    app.kubernetes.io/instance: mlflow
---
# Source: mlflow/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  labels:
    app.kubernetes.io/name: mlflow
    helm.sh/chart: mlflow-1.4.0
    app.kubernetes.io/instance: mlflow
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mlflow
      app.kubernetes.io/instance: mlflow
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mlflow
        app.kubernetes.io/instance: mlflow
    spec: 
      affinity:
        nodeAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              nodeSelectorTerms:
                - matchExpressions:
                  - key: "kubernetes.io/hostname"
                    operator: NotIn
                    values:
                      - kmaster
      imagePullSecrets:
        - name: regcred
      containers:
        - name: mlflow
          image: "alvarogg777/rapidsai:21.06-cuda11.2-runtime-ubuntu20.04-py3.8"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
            - name: jupyter
              containerPort: 8888
              protocol: TCP
            - name: yatai
              containerPort: 3000
              protocol: TCP
            - name: web
              containerPort: 8050
              protocol: TCP
          command:
            - "mlflow"
          args:
            - "server"
            - "--host=0.0.0.0"
            - "--backend-store-uri=postgresql://$(PGUSER):$(PGPASSWORD)@$(PGHOST):5432/mlflow"
            - "--default-artifact-root=$(DEFAULT_ARTIFACT_ROOT)"
          resources:
            {}
          # volumeMounts:
          #   - mountPath: "/export"
          #     name: minio
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mlflow-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mlflow.k3d.io`)
      kind: Rule
      services:
        - name: mlflow
          port: 5000
